Finised corrections in abstract and introduction

--- a/secs/0-front/5-abstract.tex
+++ b/secs/0-front/5-abstract.tex
@@ -1,5 +1,5 @@
 \begin{abstract}%
-        A primary function of diesel engine after-treatment systems is to eliminate engine-out (EO) NOx through
+        A primary function of diesel engine aftertreatment systems is to eliminate engine-out (EO) NOx through
         catalytic reduction. NOx reduction occurs in the Selective Catalytic Reduction (SCR) system, which utilizes
         ammonia generated from urea dosing. Excess ammonia is catalytically oxidized in the downstream Ammonia Slip
         Catalysis (ASC) section of the SCR-ASC system. Catalyst degradation, or aging, diminishes NOx reduction
