--- a/secs/1-intro/0-intro.tex
+++ b/secs/1-intro/0-intro.tex
@@ -10,11 +10,15 @@ To mitigate these pollutants, an aftertreatment system is installed between the 
 diesel engine aftertreatment system comprises several subsystems, each designed to target specific exhaust pollutants.
 These subsystems include:
 \begin{enumerate}
-    \item Diesel Oxidation Catalyst (DOC): This component oxidizes unburnt hydrocarbons and carbon monoxide. It also converts NO to NO2, adjusting the NO/NO2 ratio from approximately 9:1 to 1:1 to enhance Selective Catalytic Reduction (SCR) performance \cite{hiremath2015development}.
+    \item Diesel Oxidation Catalyst (DOC): This component oxidizes unburnt hydrocarbons and carbon monoxide. It also
+        converts $NO$ to $NO_2$, adjusting the $NO/NO_2$ ratio from approximately 9:1 to 1:1 to enhance Selective Catalytic
+        Reduction (SCR) performance \cite{hiremath2015development}.
 
-    \item Diesel Particulate Filter (DPF): This filter removes particulate matter from the exhaust stream. It is positioned downstream of the DOC to utilize the oxidation heat for regeneration.
+    \item Diesel Particulate Filter (DPF): This filter removes particulate matter from the exhaust stream. It is
+        positioned downstream of the DOC to utilize the oxidation heat for regeneration.
 
-    \item Selective Catalytic Reduction (SCR) and Ammonia Slip Catalysis (ASC) System: This subsystem catalytically reduces nitrogen oxides (NOx) to nitrogen and water vapor.
+    \item Selective Catalytic Reduction (SCR) and Ammonia Slip Catalysis (ASC) System: This subsystem catalytically
+        reduces nitrogen oxides ($NO_x$) to nitrogen and water vapor.
 \end{enumerate}
 %============================================================
 \begin{figure}[H]
