--- a/secs/1-intro/subs/1-1_OBD.tex
+++ b/secs/1-intro/subs/1-1_OBD.tex
@@ -2,13 +2,22 @@
 
 Catalyst aging occurs through several distinct mechanisms, each reducing the concentration of adsorption sites required for catalytic reduction. The literature outlines multiple methodologies for investigating these processes:
 \begin{enumerate}
-        \item \itbf{Hydrothermal Aging}: Exposure to heat and water vapor from the exhaust leads to irreversible structural and chemical changes on the catalyst surface, reducing ammonia storage capacity \cite{kim2007modeling}.
+        \item \itbf{Hydrothermal Aging}: Exposure to heat and water vapor from the exhaust leads to irreversible
+                structural and chemical changes on the catalyst surface, reducing ammonia storage capacity
+                \cite{kim2007modeling}.
 
-        \item \itbf{Chemical Deposits}: Deposits of sulphur, phosphorus, and urea-related compounds obstruct active sites for ammonia adsorption, thereby decreasing storage capacity \cite{kim2007modeling}.
+        \item \itbf{Chemical Deposits}: Deposits of sulphur, phosphorus, and urea-related compounds obstruct active
+                sites for ammonia adsorption, thereby decreasing storage capacity \cite{kim2007modeling}.
 
-        \item \itbf{Platinum Deposits}: Trace amounts of volatilized platinum from the diesel oxidation catalyst (DOC) can accumulate on the front section of the SCR catalyst \cite{toops2010deactivation},\cite{jen2009detection}.
+        \item \itbf{Platinum Deposits}: Trace amounts of volatilized platinum from the diesel oxidation catalyst (DOC)
+                can accumulate on the front section of the SCR catalyst
+                \cite{toops2010deactivation},\cite{jen2009detection}.
 
-        \item \itbf{Catalyst Formulation-Specific Aging} \cite{daya2018development}\cite{daya2020kinetic}: Aging mechanisms depend on the catalyst's chemical composition. Examples include dealumination in Fe-zeolite catalysts \cite{toops2010deactivation} and the sintering of anatase TiO2 (higher surface area per mass) to rutile TiO2 (lower surface area per mass) in titanium dioxide-based catalysts \cite{gieshoff2000improved}.
+        \item \itbf{Catalyst Formulation-Specific Aging} \cite{daya2018development}\cite{daya2020kinetic}: Aging
+                mechanisms depend on the catalyst's chemical composition. Examples include dealumination in Fe-zeolite
+                catalysts \cite{toops2010deactivation} and the sintering of anatase $TiO_2$ (higher surface area per mass)
+                to rutile $TiO_2$ (lower surface area per mass) in titanium dioxide-based catalysts
+                \cite{gieshoff2000improved}.
 \end{enumerate}
 
 Catalyst aging is spatially heterogeneous \cite{cheng2007laboratory}. On-engine dynamometer-accelerated aging results in
