--- a/secs/1-intro/subs/1-2_cstr.tex
+++ b/secs/1-intro/subs/1-2_cstr.tex
@@ -2,7 +2,7 @@
 
 A deductive approach to aging diagnostics models the dynamics of the signal-generating system, specifically the SCR-ASC
 system, and incorporates aging effects by tracking changes in selected model parameters. Numerous studies have addressed
-the modeling and control of SCR-ASC systems \cite{yuan2015diesel}. A common modeling strategy involves approximating the
+the modeling and control of SCR-ASC systems \cite{yuan2015diesel}. A common modelling strategy involves approximating the
 partial differential equation (PDE) model for the plug flow reaction as a set of ordinary differential equations (ODEs)
 using a series of Continuously Stirred Tank Reactors (CSTRs) (\cite{hsieh2011development}; \cite{nova2014urea}). The
 number of CSTRs implemented often serves as an indicator of model fidelity. For instance, \cite{chen2016estimation},
@@ -40,7 +40,7 @@ limitations.
 
 The model development is based on specific assumptions that reflect typical operating conditions and system behavior.
 The CSTR assumption underpins the construction of the reaction flow model for SCR reactions. Drawing on reduced order
-modeling results from previous studies, including \cite{devarakonda2008adequacy} and \cite{jain2023diagnostics}, the
+modelling results from previous studies, including \cite{devarakonda2008adequacy} and \cite{jain2023diagnostics}, the
 number of reactions considered is reduced from the full set to three (Table~\ref{tab::react_rates}). The analysis
 focuses exclusively on the standard SCR reaction, with the assumption that all $NO_x$ in the exhaust gas is $NO$, since
 commercially available $NO_x$ sensors cannot differentiate between $NO$ and $NO_2$ (\cite{nova2014urea}). The slow SCR
@@ -53,7 +53,7 @@ sites.
 
 \begin{table}[!ht]
     \begin{center}
-    \caption{SCR-ASC Reactions and Rates Considerd for Model Development}
+    \caption{SCR-ASC Reactions and Rates Considered for Model Development}
     \label{tab::react_rates}
     \begin{tabular}{|l|c|l|}
         \hline
@@ -88,7 +88,7 @@ alleviates the impact of this causality reversal. As a result, a valid CSTR mode
 can be measured, making the system unobservable. This limitation is one of the two key motivations behind the discrete
 nonlinear model developed in this thesis.
 
-One additonal consideration is the saturation of adsorption sites on the catalyst surface. The total concentration of adsorption sites, denoted as $\Gamma$, is the sum of occupied and free adsorption sites. Thus, at any give time,
+One additional consideration is the saturation of adsorption sites on the catalyst surface. The total concentration of adsorption sites, denoted as $\Gamma$, is the sum of occupied and free adsorption sites. Thus, at any given time,
 \begin{align}
     \Gamma \geq \con{NH_3}^{ads} \geq 0
 \end{align}
@@ -127,9 +127,9 @@ assumption. However, this model lacks parsimony and identifiability given the cu
 identifiable model, the nonlinear system can be linearized, and lumped parameters for input-output equations can be
 derived based on the available measurements \cite{charla2024reduced}.
 
-Furthermore, the hybrid dynamics modeled in the above equations capture the high-frequency reaction kinetics coupled
+Furthermore, the hybrid dynamics modelled in the above equations capture the high-frequency reaction kinetics coupled
 with mass flow. The slowest process, or dominant mode, can be approximated as a first-order system with residence time
-as the time constant. For effective sampling of such a system, the sampling frequency should be n-times (atleast twice) the inverse of the residence time. Let, $\tau$ be the residence time fo the reacting flow through the SCR-ASC system, then the sampling frequency $f_s = 1/t_s$ should be:
+as the time constant. For effective sampling of such a system, the sampling frequency should be n-times (at least twice) the inverse of the residence time. Let $\\tau$ be the residence time of the reacting flow through the SCR-ASC system, then the sampling frequency $f_s = 1/t_s$ should be:
 \begin{align}
     f_s &\geq \frac{n}{\tau}
     \implies t_s \leq \frac{\tau}{n} \qquad n \geq 2
@@ -144,5 +144,5 @@ Figure~\ref{fig::cstr_validity}.
     \label{fig::cstr_validity}
 \end{figure}
 The above analysis highlights the limitations of the CSTR model in practical applications, particularly regarding
-sampling frequency requirements. This insight further motivates the development of alternative modeling approaches that
+sampling frequency requirements. This insight further motivates the development of alternative modelling approaches that
 can accommodate lower sampling frequencies while still accurately capturing the dynamics of the SCR-ASC system.
