--- a/secs/2-data/0-subs/0-2_truck_data.tex
+++ b/secs/2-data/0-subs/0-2_truck_data.tex
@@ -20,7 +20,7 @@ pNOxInppm & ppm & $\con{NO_x}^{in}$ & Engine-Out $NO_x$\\
 % =============================================================
 
 In contrast, the truck data comprise on-board sensor measurements from four long-haul trucks collected during the study
-period (Table~\ref{tab::truck_data_summary}). FTIR sensor measurements for species concentrations and tailpipe ammonia
+period (Table~\ref{tab::truck_data_mileage}). FTIR sensor measurements for species concentrations and tailpipe ammonia
 measurements are not available. The data sampling frequency is 1 Hz. The operating temperatures
 (Figure~\ref{fig::truck_data_temp_profiles}) recorded in the truck data range from 200 to 300 $^oC$, which is similar to
 the hFTP drive cycles of the test-cell data. However, the inlet and outlet $NO_x$ concentrations and urea dosing
@@ -45,15 +45,15 @@ be recovered through interpolation.
 \begin{table}[!ht]
         \centering
         \caption{Truck Data Set Years and Mileage Difference}
-        \label{tab::truck_data_summary}
-        \begin{tabular}{l l l r}
+        \label{tab::truck_data_mileage}
+        \begin{tabular}{c c c c}
         \hline \hline
-               & Earlier Data & Latter Data & Milage \\
-         Truck &  Year            & Year    & Difference\\ \hline \hline
-        AD Transport (adt) & $2015$ & $2017$ & $2.79 \times 10^5$\\
-        Mesilla Valley (mes) & $2015$ & $2018$ & $11.87 \times 10^5$\\
-        Werner (wer) & $2015$ & $2017$ & $5.89 \times 10^5$\\
-        Transwest (trw) & $2015$ & $2016$ & $6.56 \times 10^5$ \\
+         Truck    & Earlier Data & Latter Data & Milage \\
+         Code     &  Year            & Year    & Difference\\ \hline \hline
+        ADT & $2015$ & $2017$ & $2.8 \times 10^5$\\
+        MES & $2015$ & $2018$ & $11.9 \times 10^5$\\
+        WER & $2015$ & $2017$ & $5.9 \times 10^5$\\
+        TRW & $2015$ & $2016$ & $6.6 \times 10^5$ \\
         \hline \hline
         \end{tabular}
 \end{table}
