--- a/secs/2-data/2-data_units.tex
+++ b/secs/2-data/2-data_units.tex
@@ -3,7 +3,7 @@ The available test and truck data used for evaluating the model structure must b
 following table lists the units used for each of the physical properties.
 \begin{table}[!ht]
    \centering
-   \caption{Measuremnt Units used in the Model}
+   \caption{Measurement Units used in the Model}
    \begin{tabular}{l l}
        \hline \hline
         \itbf{Property} & \itbf{Unit}\\
