Made all the corrections in chapter 2 as well

--- a/secs/2-data/2-data_units.tex
+++ b/secs/2-data/2-data_units.tex
@@ -9,7 +9,7 @@ following table lists the units used for each of the physical properties.
         \itbf{Property} & \itbf{Unit}\\
         \hline \hline
         Concentration   & $ 10^{-3} \, mol/m^{3}$ \\
-        Temperature     & $ \times 10 + 200\lx{^o}{C}$ \\
+        Temperature     & $ \times 10 + 200\,^{\circ}\text{C}$ \\
         Flow Rate   & $\times 10 \, g/s$ \\
         Urea Injection  & $\times 10^{-1}\, ml/s$ \\
         Time            & $s$ \\
@@ -42,7 +42,7 @@ In general the operating temperature is very high ($250 \,^0 C \approx 500 K$), 
 \end{align}
 %%==================
 \subsubsection{Sensitivity of density to change in $NO_x$ concentrations}
-Let, $P_{NO_x}$ be the partial pressure of $NO_x$ and $P_0$ be the total pressure. Assuming the rest of the gas constitutions are similar to that of air. We have the density as:
+Let, $P_{NO_x}$ be the partial pressure of $NO_x$ and $P_0$ be the total pressure. Assuming the rest of the gas constituents are similar to that of air, we have the density as:
 \begin{align*}
     \rho &= \frac{1}{RT} \lr{ P_{NO_x} M_{NO_x} + (P_0 - P_{NO_x}) M_{air}} = \frac{1}{RT} \lr{ P_{NO_x} \lr{M_{NO_x} - M_{air}} + P_0 M_{air}}\\
     \implies \frac{\partial \rho}{\partial P_{NO_x}} &= \frac{1}{RT} \lr{\lr{M_{NO_x} - M_{air}}}\\
@@ -66,7 +66,7 @@ We have,
     \implies \frac{\delta \rho}{\rho} &= \frac{\lr{ 17 \delta \con{NO_x}}}{17 \con{NO_x} + 29}
     \qquad \text{at constant temperature}
 \end{align*}
-The above equation demonstrates that the relative change in density due to relative change in $NO_x$ concentration is insignificant. As the molarity of $NO_x$ itself is small.
+The above equation demonstrates that the relative change in density due to relative change in $NO_x$ concentration is insignificant, as the molarity of $NO_x$ itself is small.
 
 % ====
 
@@ -79,7 +79,7 @@ measurements.
 \end{align}
 %===
 Thus, this measurement when converted into $mol/m^3$, the temperature of the gas will be essential to get the right
-value as the volume of 1 mole of air changes with temperature. Assuming ideal gas behaviour,
+value as the volume of 1 mole of air changes with temperature. Assuming ideal gas behavior,
 %===
 \begin{align}
     V_{air} &= n_{air} T_{air} \times \frac{V_0}{T_0}
