Done with the corrections in chapter 3

--- a/secs/3-governing_eqns/2-NH3ads_proc_dyn.tex
+++ b/secs/3-governing_eqns/2-NH3ads_proc_dyn.tex
@@ -9,9 +9,9 @@
 The ammonia adsorption/desorption process dynamics involve all the three above-mentioned reactions. The gaseous ammonia
 that enters the catalyst chamber gets adsorbed onto the free sites on the catalyst surface at a rate proportional to the
 volumetric concentration of the gaseous ammonia and the surface concentration of the free sites. The adsorbed ammonia
-then either reacts with the gaseous $NO_x$ (Eiley-Rideal Mechanism) releasing $N_2$ and $H_2O$ or decomposes to form
+then either reacts with the gaseous $NO_x$ (Eley-Rideal Mechanism) releasing $N_2$ and $H_2O$ or decomposes to form
 $N_2$ and $H_2O$ (Surface Decomposition). In either case, the process frees up the adsorption sites for the next cycle
-of gaseous ammonia. We first derive the dynamics of the adsorption/desorption process when the catalyst remains unsaturated and the extend it to the saturated case later in Section \ref{sec::sat_cat}.
+of gaseous ammonia. We first derive the dynamics of the adsorption/desorption process when the catalyst remains unsaturated and then extend it to the saturated case later in Section \ref{sec::sat_cat}.
 %===
 \begin{align*}
     4 NH_3 ^{ads} + 4 NO + O_2 &\xrightarrow[]{k_{scr}} 4 N_2 + 6 H_2O \\
@@ -43,9 +43,9 @@ The units of all the rates and rate constants are tabulated below:
     k_{oxi} &= s^{-1}
 \end{align*}
 %===
-\itbf{Note:}In this section we are interested in the Surface rates where the products are assumed to linger just on the
+\itbf{Note:} In this section we are interested in the Surface rates where the products are assumed to linger just on the
 surface of the catalyst. The surface rates of the gaseous products/reactants can be converted to volumetric rates by
-using the conversion factor $A_{scr}/V$ where $A_{scr}$ is the area of the SCR catalyst and V is the volume of the
+using the conversion factor $A_{scr}/V$ where $A_{scr}$ is the area of the SCR catalyst and $V$ is the volume of the
 catalyst chamber. This assumes that there is instantaneous mixing of the close-to-surface moles with the gaseous moles.
 Thus,
 \begin{align}
