--- a/secs/3-governing_eqns/6-proc_dyn.tex
+++ b/secs/3-governing_eqns/6-proc_dyn.tex
@@ -4,32 +4,36 @@ From previous derivations, we have the complete process dynamics of SCR-ASC dyna
 
 \begin{enumerate}
     \item Urea dosing dynamics:
-    \begin{align*}
+    \begin{align}
     \con{NH_3}^{in} (k) &= 2r_u t_s \rho_0 \times \frac{u_{inj}(k)}{F}
-    \end{align*}
+    \label{eqn::urea_dosing}
+    \end{align}
 
     \item $NO_x$ reduction dynamics:
-    \begin{align*}
+    \begin{align}
     \con{NO_x}^{out} (k + 1) &= \con{NO_x}^{in} (k) \lr{1 - k_{s2v} k_{scr} \sigma(k) \tau}
-    \end{align*}
+    \label{eqn::NOX_process}
+    \end{align}
 
     \item Gaseous ammonia dynamics:
-    \begin{align*}
+    \begin{align}
     \con{NH_3}^{out} (k + 1) &= \con{NH_3}^{in}(k) \lr{1 - \tau k_{s2v}k_{ads} \lr{\Gamma - \sigma(k)}} + \tau k_{s2v} k_{des} \sigma(k)
-    \end{align*}
+    \label{eqn::NH3_gas_process}
+    \end{align}
 
     \item Ammonia adsorption/desorption dynamics:
-    \begin{align*}
-        \sigma^{ub}(k+1) &= \sigma(k) + t_s k_{ads} \con{NH_3}^{in} (k) \lr{\Gamma - \sigma(k)}
-                - t_s \lr{k_{oxi} + k_{des}} \sigma(k) - t_s k_{scr} \con{NO_x}^{in}(k) \sigma(k) \\
-        \sigma(k) &= g_{sat} \lr{\sigma^{ub}(k)}
-        \text{where, }\qquad &\\
+    \begin{align}
+        \sigma^{ub}(k+1) &= \sigma(k) + t_s k_{ads} \con{NH_3}^{in} (k) \lr{\Gamma - \sigma(k)} \notag \\
+                         & \quad - t_s \lr{k_{oxi} + k_{des}} \sigma(k) - t_s k_{scr} \con{NO_x}^{in}(k) \sigma(k)
+                \label{eqn::sigma_process}\\
+        \sigma(k) &= g_{sat} \lr{\sigma^{ub}(k)}  \label{eqn::sigma_sat}\\
+        \text{where, }\qquad & \notag \\
         g_{sat} (\sigma) &= \begin{cases}
         \sigma & \text{if } 0 \leq \sigma \leq \Gamma \\
         \Gamma & \text{if } \sigma > \Gamma \\
         0 & \text{if } \sigma < 0
-    \end{cases}
-    \end{align*}
+    \end{cases} \label{eqn::sat_func}
+    \end{align}
 \end{enumerate}
 
 The above four equations are the complete process dynamics of SCR-ASC dynamics with urea dosing. The above equations are
@@ -37,6 +41,6 @@ nonlinear and coupled with implicit dependence on temperature and flow rate. In 
 rewritten in a parametric form with standard state-space representation. For convenience and clarity '(k)' is dropped
 from the variables.
 
-Note that the tailpip (gaseous) ammonia dynamics don't effect the $NO_x$ reduction dynamics and we don't have the
-necessary measurements for trucks for model paramter estiamtion. Moreover, we only need the models for $NO_x$ reduction
+Note that the tailpipe (gaseous) ammonia dynamics don't affect the $NO_x$ reduction dynamics and we don't have the
+necessary measurements for trucks for model parameter estimation. Moreover, we only need the models for $NO_x$ reduction
 and Ammonia adsorption for characterizing the I/O dynamics of the system using the measurements.
